--- a/styles.css
+++ b/styles.css
@@ -43,6 +43,7 @@ nav{
     opacity: 0.5;
     padding: 0.5px;
     border-radius: 10px;
+    
 }
 
 nav>ul>li>a{
@@ -182,3 +183,19 @@ video {
      text-align: center;
  }
  
+
+ ol>li{
+    font-size: x-large;
+    list-style: square;
+ }
+ .landing{
+     margin-left: 30%;
+     padding-bottom: 10%;
+     padding-top: 10%;
+     
+ }
+span{
+    color:pink;
+    font-weight: bolder;
+    font-size: 30px;
+}
